--- a/stringAarray/实验四 串与数组.md
+++ b/stringAarray/实验四 串与数组.md
@@ -2,15 +2,15 @@
 
 ### 实验题目一
 
-```c++
-①　串的赋值（将一个字符串常量赋值给一个串）；
-②　求串的实际长度；
-③　两个串的比较：串1>串1，返回值大于0，串1==串2，返回值等于0，串1<串2，返回值小于0；
-④　将串清为空串；
-⑤　两个串的联接；返回长的新串
-⑥　求子串：返回主串中第i个位置开始的m个字符；
-⑦　求子串的位置：返回主串中子串第一次出现的位置序号。
-⑧　删除串中第i个字符开始的j个字符。
+```markdown
+1)串的赋值（将一个字符串常量赋值给一个串）；
+2)求串的实际长度；
+3)两个串的比较：串1>串1，返回值大于0，串1==串2，返回值等于0，串1<串2，返回值小于0；
+4)将串清为空串；
+5)两个串的联接；返回长的新串
+6)求子串：返回主串中第i个位置开始的m个字符；
+7)求子串的位置：返回主串中子串第一次出现的位置序号。
+8)删除串中第i个字符开始的j个字符。
 ```
 
 实验代码
@@ -212,7 +212,7 @@ void delStr(SString &s, int pos, int len)
 
 ### 实验题目二
 
-```c++
+```markdown
 稀疏矩阵的三元组顺序表示方法及基本操作的实现（建立、输出、转置）并实现一个主菜单来实现。
 ```
 
